# NPY-for-Fortran-barebone

./: CMakeLists.txt  LICENSE  README.md  example.py
src/: endian_swap.f90  example.f90  npy.F90  npy.f90
